    contain at least one non-whitespace character.  Thanks, Guillem Jover.
    (Closes: #627490)
  * Add the release date of 3.9.2.0 to upgrading-checklist.
  * Fix ordering of the last entries in the 3.9.2.0 upgrading-checklist.
  * Fix typo in upgrading-checklist entry for multiarch paths.  Thanks,
    Michael Dorrington. Closes: #626408
  * Add AGPL-3 to tools/license-count.

  [ Bill Allombert ]
  * Policy: Link relationship fields (7.1) to architecture specification
    strings (11.1).
    Patch from Charles Plessy in #628174.
  * Policy: Retire legacy Motif policy (11.8.8)
    Proposed by: Justin B Rye
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Jakub Wilk <jwilk@debian.org>
    Seconded: Steve Langasek <vorlon@debian.org>
    Seconded: Charles Plessy <plessy@debian.org>
    Closes: #621479
  * copyright-format: Fix URL for the Eiffel Forum License.
    Reported by Thomas Preud'homme, patch by Charles Plessy.
    Closes: #623050
  * copyright-format: Update SPDX link to point to the SPDX license registry.
    Patch by Charles Plessy.  Closes: #628540
  * Policy: Clarify that 'machine-extractable' referer the copyright
    files (12.5)
    Wording:  Charles Plessy <plessy@debian.org>
    Seconded: Bill Allombert <ballombe@debian.org>
    Seconded: Jakub Wilk <jwilk@debian.org>
    Closes: #617516
  * copyright-format: remove drivers from abstract and useless appendix
    Wording: Lars Wirzenius <liw@liw.fi>
    Seconded: Charles Plessy <plessy@debian.org>
    Seconded: Jakub Wilk <jwilk@debian.org>
    Closes: #640735
  * Perl policy: Document major version upgrade trigger
    Wording: Dominic Hargreaves <dom@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Niko Tyni <ntyni@debian.org>
    Seconded: Gregor Herrmann <gregoa@debian.org>
    Closes: #619275
  * Virtual: change ttf-japanese-{mincho, gothic} to
    fonts-japanese-{mincho, gothic}.
    Proposed by: Nobuhiro Iwamatsu <iwamatsu@nigauri.org>