@@ -80,7 +80,8 @@ install_program := install -p	-o root -g root	 -m  755
 make_directory  := install -p -d	-o root -g root	 -m  755
 
 
-all build: stamp-build
+all build build-indep: stamp-build
+build-arch:
 stamp-build: version.ent $(sanitycheck)
 	$(MAKE) $(SGML_FILES:=.sgml.validate) \
 		$(SGML_FILES:=.html.tar.gz) \
@@ -171,7 +172,8 @@ stamp-policy:  build $(sanitycheck)
 	touch		    stamp-policy
 
 
-.PHONY: configure build binary binary-arch binary-indep clean checkroot
+.PHONY: configure build build-arch build-indep binary binary-arch
+.PHONY: binary-indep clean checkroot
 
 #Local variables:
 #mode: makefile
